--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^7.1.4",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-email-validator": "^1.0.2",
